# local_moonie

./: .env.example  .gitignore  AUR_PACKAGING.md  CHANGELOG.md  CHANGES_SUMMARY.md  COMPLETE_RENAME_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKREF.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  VERSION_GUIDE.md  avante_config.lua  bump_version.sh  example_avante_lazy_nvim_config.lua  example_client.py  local-moonie.service  moonshot-local.service  pyproject.toml  start.sh  test_api.sh
local_moonie/: __init__.py
local_moonie/app/: __init__.py  browser.py  llm.py  main.py  search.py  search_decider.py  sse.py
moonshot_local/: __init__.py
moonshot_local/app/: __init__.py  config.py  main.py  prompting.py  schemas.py
