[project]
name = "local_moonie"
version = "0.1.1"
description = "Local OpenAI-compatible proxy with Firefox/Selenium search + Ollama backend for Avante.nvim by @yetone"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "local_moonie contributors"}
]
maintainers = [
    {name = "local_moonie contributors"}
]
keywords = [
    "avante",
    "neovim",
    "ollama",
    "llm",
    "openai",
    "selenium",
    "web-search",
    "local-ai",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "selenium>=4.16.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/gub-7/local_moonie"
Documentation = "https://github.com/gub-7/local_moonie#readme"
Repository = "https://github.com/gub-7/local_moonie"
Issues = "https://github.com/gub-7/local_moonie/issues"
"Avante.nvim" = "https://github.com/yetone/avante.nvim"

[project.scripts]
local-moonie = "local_moonie.app.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["local_moonie", "local_moonie.app"]

[tool.setuptools.package-data]
local_moonie = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

